# janscobolkernel

./: README.md  pyproject.toml
example/: example.ipynb
janscobolkernel/: kernel.json
src/janscobolkernel/: __main__.py  install_kernelspec.py  kernel.py
